# Atf-I-Memnu

./: .gitignore  README.md  SCORING.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
backend/: .gitignore  atfi-memnu-backend.spec  compare_extraction.py  config.py  investigate_refs.py  main.py  pyproject.toml  server_state.py
backend/api/: parsing.py  router.py  settings.py  verification.py  websocket.py
backend/models/: pdf_document.py  settings.py  source.py  verification_result.py  ws_events.py
backend/models/citation-ner-int8/: config.json  model_quantized.onnx  tokenizer_config.json
backend/scrapers/: rate_limiter.py
backend/services/: author_matcher.py  cache_store.py  citation_format_detector.py  daily_quota.py  job_store.py  match_scorer.py  ner_boundary_detector.py  ner_extractor.py  ner_model_manager.py  openaire_token_manager.py  pdf_parser.py  reference_detector.py  scoring_constants.py  search_settings.py  search_urls.py  settings_store.py  source_extractor.py  url_checker.py  verification_orchestrator.py
backend/tests/: test_author_matcher.py
backend/training/: .gitignore  README.md  TRAINING_GUIDE.md  requirements.txt
backend/training/notebooks/: train_citation_ner.ipynb
backend/training/reports/: eval_20260410T233931Z.md
backend/training/scripts/: _label_helper.py  bench_latency.py  export_onnx.py  filter_candidates.py  prepare_data.py  run_eval.py  (+1 more)
backend/utils/: doi_extractor.py  fuzzy_match.py  text_cleaning.py  url_cleaner.py
backend/verifiers/: _http.py  arxiv.py  base.py  core.py  crossref.py  europe_pmc.py  meta_search.py  open_library.py  openaire.py  openalex.py  plos.py  pubmed.py  semantic_scholar.py  trdizin.py  wos.py
(+75 files in other folders)
