[project]
name = "atfi-memnu-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "tokenizers>=0.20",
    "numpy>=1.26",
    "onnxruntime-directml>=1.19,<2",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "rapidfuzz>=3.14.3",
    "urllib3>=2.0",
    "uvicorn[standard]>=0.43.0",
    "websockets>=16.0",
]
