[project]
name = "atfi-memnu-backend"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.0",
    "tokenizers>=0.20",
    "numpy>=2.4.4",
    "onnxruntime-directml>=1.19,<2",
    "lxml>=6.0.4",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "rapidfuzz>=3.14.5",
    "urllib3>=2.0",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
]
