[project]
name = "atfi-memnu-backend"
version = "0.8.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "tokenizers>=0.23.1",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.0,<2",
    "lxml>=6.1.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "rapidfuzz>=3.14.5",
    "urllib3>=2.0",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]
